--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bower": "^1.8.0",
     "express": "^4.15.2",
+    "navigo": "^4.7.0",
     "systemjs": "^0.20.12",
     "systemjs-plugin-babel": "0.0.21"
   },
