--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,12 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+   "dependencies": {
+    "jquery": "^3.2.1",
+    "handlebars": "^4.0.5",
+    "bootstrap": "^3.3.7",
+    "toastr": "^2.1.3",
+    "cryptojs": "*"
+  }
 }
