--- a/bower.json
+++ b/bower.json
@@ -14,11 +14,14 @@
     "test",
     "tests"
   ],
-   "dependencies": {
+  "dependencies": {
     "jquery": "^3.2.1",
     "handlebars": "^4.0.5",
     "bootstrap": "^3.3.7",
     "toastr": "^2.1.3",
-    "cryptojs": "*"
+    "crypto-js": "^3.1.9"
+  },
+  "resolutions": {
+    "jquery": "^3.2.1"
   }
 }
