--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "awesome spa app",
   "main": "app/index.js",
   "scripts": {
-    "restart" : "./node_modules/.bin/nodemon app/index.js",
+    "restart": "./node_modules/.bin/nodemon app/index.js",
     "start": "node app/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "bower install"
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/lemon-org/lemon-ninja-miner#readme",
   "dependencies": {
     "bower": "^1.8.0",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.15.2",
     "navigo": "^4.7.0",
     "systemjs": "^0.20.12",
