--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,8 @@
   ],
   "dependencies": {
     "jquery": "^3.2.1",
-    "handlebars": "^4.0.5"
+    "handlebars": "^4.0.5",
+    "bootstrap": "^3.3.7",
+    "toastr": "^2.1.3"
   }
 }
