small fixes in puzzle-controller

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "awesome spa app",
   "main": "app/index.js",
   "scripts": {
+    "restart": "./node_modules/.bin/nodemon app/index.js",
     "start": "node app/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "bower install"
@@ -18,14 +19,19 @@
     "url": "https://github.com/lemon-org/lemon-ninja-miner/issues"
   },
   "homepage": "https://github.com/lemon-org/lemon-ninja-miner#readme",
-   "dependencies": {
+  "dependencies": {
     "bower": "^1.8.0",
+    "crypto-js": "^3.1.9-1",
+    "cryptojs": "^2.5.3",
     "express": "^4.15.2",
     "navigo": "^4.7.0",
     "systemjs": "^0.20.12",
     "systemjs-plugin-babel": "0.0.21"
   },
   "engines": {
-    "node" : "7.9.0"
+    "node": "7.9.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
