--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   "homepage": "https://github.com/lemon-org/lemon-ninja-miner#readme",
   "dependencies": {
     "bower": "^1.8.0",
+    "chai": "^3.5.0",
     "express": "^4.15.2",
+    "mocha": "^3.3.0",
     "navigo": "^4.7.0",
+    "sinon": "^2.2.0",
     "systemjs": "^0.20.12",
     "systemjs-plugin-babel": "0.0.21"
   },
