--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
     "express-session": "^1.15.2",
+    "mongoose": "^4.9.8",
     "navigo": "^4.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
